# Cleanster-partner-api-sdk

./: .replit  README.md  pyproject.toml  replit.md
android-sdk/: CHANGELOG.md  README.md  build.gradle.kts  settings.gradle.kts
attached_assets/: Pasted-Build-me-a-production-ready-MCP-Model-Context-Protocol-_1777085929098.txt
csharp-sdk/: .gitignore  CHANGELOG.md  Cleanster.sln  README.md
go-sdk/: .gitignore  CHANGELOG.md  LICENSE  README.md  blacklist.go  bookings.go  checklists.go  cleanster_test.go  client.go  config.go  errors.go  go.mod  http_client.go  models.go  other.go  payment_methods.go  properties.go  users.go  webhooks.go
java-sdk/: .gitignore  CHANGELOG.md  README.md  pom.xml
kotlin-sdk/: CHANGELOG.md  README.md  build.gradle.kts  settings.gradle.kts
make-app/: README.md  app.json  base.json
mcp-server/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
php-sdk/: .gitignore  CHANGELOG.md  README.md  composer.json  phpunit.xml
python-sdk/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
python-sdk/cleanster/: __init__.py  client.py  config.py  exceptions.py  http_client.py
python-sdk/cleanster/api/: __init__.py  blacklist.py  bookings.py  checklists.py  other.py  payment_methods.py  properties.py  users.py  webhooks.py
python-sdk/cleanster/models/: __init__.py  booking.py  checklist.py  payment_method.py  property.py  response.py  user.py
python-sdk/tests/: test_cleanster_sdk.py
ruby-sdk/: .gitignore  CHANGELOG.md  Gemfile  README.md  cleanster.gemspec
soap-sdk/: CHANGELOG.md  pom.xml  (+1 more)
(+362 files in other folders)
